PDB target properties are not passed through to NVCC correctly
Target properties COMPILE_PDB_NAME_<CONFIG>
, COMPILE_PDB_OUTPUT_DIRECTORY_<CONFIG>
, and PDB_NAME_<CONFIG>
are not correctly applied to .cu files compiled with NVCC. The NVCC "-Xcompiler /Fd" flag is not passed, meaning that debug information from the host code within a .cu file is stored in the default location (e.g. "vc140.pdb"), instead of the desired PDB file.
This behaviour was observed in nightly build cmake-3.10.20180114-g3265b, using the VS2017 generator and CUDA 9.0.176.
Edited by James Hancox